# ros2_ws

./: looptop_utm.csv
install/: local_setup.sh  setup.sh
install/cpp_parameters/lib/cpp_parameters/: minimal_param_node
install/cpp_parameters/share/cpp_parameters/: local_setup.sh  package.sh
install/cpp_parsing/lib/cpp_parsing/: parser  reader
install/cpp_parsing/share/cpp_parsing/: local_setup.sh  package.bash  package.ps1  package.sh  package.xml
install/cpp_proj/lib/cpp_proj/: transpose
install/cpp_proj/share/cpp_proj/: package.bash  package.dsv  package.sh
install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh  package.xml
install/cpp_srvcli/lib/cpp_srvcli/: client  server
install/cpp_srvcli/share/cpp_srvcli/: local_setup.sh  package.sh
install/custom_interfaces/share/custom_interfaces/: local_setup.sh  package.sh
log/: latest_build
src/cpp_parsing/: CMakeLists.txt  package.xml
src/cpp_parsing/src/: TalkFile_nmea.txt  nmea_reader.cpp  utm_parser.cpp
src/cpp_proj/: CMakeLists.txt  package.xml
src/cpp_proj/src/: TalkFile_nmea.txt  proj_coordinate.cpp
src/cpp_pubsub/: CMakeLists.txt
src/cpp_pubsub/install/: local_setup.sh  setup.bash  setup.sh
src/cpp_pubsub/log/: latest_build
src/cpp_srvcli/: package.xml
src/cpp_srvcli/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
src/cpp_srvcli/log/: latest_build
src/custom_interfaces/: CMakeLists.txt
src/custom_interfaces/msg/: Utm.msg
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/more_interfaces/: CMakeLists.txt
src/py_proj/: setup.cfg  setup.py
src/py_proj/py_proj/: TalkFile_nmea.txt  proj_coordinate.py  proj_data_reader.py
src/tutorial_interfaces/install/: local_setup.sh  setup.sh
src/tutorial_interfaces/log/: latest_build
(+89 files in other folders)
